syntax = "proto3";

option go_package = "generated/categories";

package category;

message CreateCategoryRequest {
    string name = 1;
    string description = 2;
}

message CreateCategoryResponse {
    string id = 1;
    bool status = 2;
    string message = 3;
}

message GetAllCategoryRequest {
    int64 offset = 1;
    int64 limit = 2;
}

message GetAllCategoryResponse {
    repeated Category catygories = 1;
    int64 offset = 2;
    int64 limit = 3;
    int64 total = 4;
}

message Category {
    string id = 1;
    string name = 2;
    string description = 3;
}

message UpdateCategoryRequest {
    string id = 1;
    string name = 2;
    string description = 3;
}

message UpdateCategoryResponse {
    string id = 1;
    string name = 2;
    string description = 3;
}

message DeleteCategoryRequest {
    string id = 1;
}

message DeleteCategoryResponse {
    bool status = 1;
    string message = 2;
}