syntax = "proto3";

option go_package = "generated/reviews";

package review;

message Review {
    string id = 1; 
    string product_id = 2;
    string user_id = 3;
    int32 rating = 4;
    string comment = 5;
}

message GetAllReviewsRequest {
    int64 offset = 1;
    int64 limit = 2;
    string search_by = 3;
    int64 sort_by = 4;
}

message GetAllReviewsResponse {
    repeated Review reviews = 1;
    int64 page = 2;
    int64 limit = 3;
    int64 total = 4;
}

message GetReviewsByPIdRequest{
    string product_id = 1;
    int64 offset = 2;
    int64 limit = 3;
}

message GetReviewsByPIdResponse {
    repeated Review reviews = 1;
    int64 page = 2;
    int64 limit = 3;
    int64 total = 4;
}

message CreateReviewRequest {
    string product_id = 1;
    string user_id = 2;
    int32 rating = 3;
    string comment = 4;
}

message CreateReviewResponse {
    string id = 1;
    string user_id = 2;
    string product_id = 3;
    int32 rating = 4;
    string comment = 5;
}

message UpdateReviewRequest {
    string id = 1;
    string user_id = 2;
    string product_id = 3;
    int32 rating = 4;
    string comment = 5;
}

message UpdateReviewResponse {
    string id = 1;
    string user_id = 2;
    string product_id = 3;
    int32 rating = 4;
    string comment = 5;
}

message DeleteReviewRequest {
    string id = 1;
    string user_id = 2;
    string product_id = 3;
}

message DeleteReviewResponse {
    bool success = 1;
    string message = 2;
}